--- a/public/style.css
+++ b/public/style.css
@@ -481,6 +481,12 @@ body {
     box-shadow: 0px 2px 41px 10px rgba(107, 130, 175, 0.1);
     height: 700px;
 }
+@media (min-width: 900px) {
+    .content-wrapper .img-table .editor-container {
+        width: 1200px;
+        height: 900px;
+    }
+}
 
 .content-wrapper .img-table .editor-container .plugin-spinner {
     background: rgba(0, 0, 0, 0.25);
@@ -626,7 +632,7 @@ body {
 
 .usage .usage-title p .documentation .colored-text a {
     font-weight: 600;
-    font-size: 20;
+    font-size: 20px;
     color: #3daba4;
     text-decoration: none;
 }
