add finetunes separately(logic)

--- a/public/style.css
+++ b/public/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 .content-wrapper {
-    padding: 23px 25px 60px 24px;
+    /*padding: 23px 25px 60px 24px;*/
 }
 
 .content-wrapper .header {
